--- a/changelog.txt
+++ b/changelog.txt
@@ -1,13 +1,17 @@
-#### 0.0.9 / 2022-08-02
+= 1.0.0 / 2022-08-05 =
+* First wordpress.org release
+* Changed prefixes from "ncb_" to "sscb_"
+
+= 0.0.9 / 2022-08-02 =
 * Plugin rename to "Super Simple Cookie Bar"
 * text-domain changed to "super-simple-cookie-bar"
 * Hosted CSS and JS locally
 * Fixed some php notices found on first install
 
-#### 0.0.8 / 2022-07-29 =
+= 0.0.8 / 2022-07-29 =
 * text-domain changed to "super-simple-cookie-bar-by-ncompass"
 
-#### 0.0.7 / 2022-07-28
+= 0.0.7 / 2022-07-28 =
 * Added function headers etc for wordpress.org compliance
 * Added wordpress.org readme.txt
 * Added uninstall script
@@ -16,16 +20,16 @@
 * Switch to Yoda Conditions
 * Improved code readbility and formatting
 
-#### 0.0.6 / 2022-05-11
+= 0.0.6 / 2022-05-11 =
 * Fixed WPML string translation on Learn More Link text
 
-#### 0.0.5 / 2022-05-10
+= 0.0.5 / 2022-05-10 =
 * Moved data collection outside init() building.
 * Added wordpress localisation to settings Page.
 * Added WPML string translation Compatibility to input user data.
 * Added WPML permalink filter to learn more link href field
 
-#### 0.0.4 / 2022-05-09
+= 0.0.4 / 2022-05-09 =
 * Added theme setting.
 * Added message setting.
 * Added Dismiss text setting.
@@ -33,12 +37,12 @@
 * Added placeholders to fields to show default setting or example setting.
 * Improved default settings resilience
 
-#### 0.0.3 / 2022-05-09
+= 0.0.3 / 2022-05-09 =
 * Added position setting
 * Added defaults when no value set
 
-#### 0.0.2 / 2022-05-06
+= 0.0.2 / 2022-05-06 =
 * Implemented Settings Link on Plugin Page
 
-#### 0.0.1 / 2022-05-05
+= 0.0.1 / 2022-05-05 =
 * Initial Release
